feature: test for all type transaction
