# api/model/dto/kms.dto.go
@@ -1,6 +1,6 @@
 package dto
 
-type AccountDTO struct {
+type AddressDTO struct {
 	KeyID string `json:"keyID" validate:"required" example:"f50a9229-e7c7-45ba-b06c-8036b894424e"`
 }
 
@@ -9,6 +9,6 @@ type AccountListDTO struct {
 	Marker *string `json:"marker" validate:"omitempty"`
 }
 
-type ImportAccountDTO struct {
+type ImportAddressDTO struct {
 	PK string `json:"pk" validate:"required,sha256" example:"637081577126ff5c2d327f992bd66548e00262578fd558d7fe272ef21b8bf825"`
 }
