# api/model/res/txn.res.go
@@ -1,5 +1,9 @@
 package res
 
-type TxnRes struct {
-	Hash string `json:"transaction hash" example:"0x661e2747abdb7c11197f6c7d9a89d4b543248bb7dd7f08a27cacb2f2f7474c0f"`
+// type TxnRes struct {
+// 	Hash string `json:"transaction hash" example:"0x661e2747abdb7c11197f6c7d9a89d4b543248bb7dd7f08a27cacb2f2f7474c0f"`
+// }
+
+type SingedTxnRes struct {
+	SignedTxn string `json:"signedTxn" example:"0xf86a5685ba43b740008252089439e243a7f209932df41e1fc0a1ada51b3a04b46d0180860b280f5b1d3aa00d2ea43cfd9b91151348d037a5a80293f543e1700a7019853f28063f6442c826a052a29797169740b1bc48962e197299061c8aa3314951a9c71418d19036604645"`
 }
